force-app/main/default/objects/KimbleOne__AnalysisDimension__c/KimbleOne__AnalysisDimension__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Analysis Dimension</label>
    <nameField>
        <label>Analysis Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analysis Dimension</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>