force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__AnalysisLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AnalysisLevel__c</fullName>
    <formula>IF(KimbleOne__HasAccount__c,1,0) + IF(KimbleOne__HasBusinessUnit__c,1,0) + IF(KimbleOne__HasProposition__c,1,0) +  IF(KimbleOne__HasResource__c,1,0) + IF(KimbleOne__HasResourceType__c,1,0) + IF(KimbleOne__HasGrade__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analysis Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>