force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Account</label>
    <type>Checkbox</type>
</CustomField>