force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasBusinessUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Business Unit</label>
    <type>Checkbox</type>
</CustomField>