force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasGrade__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasGrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Grade</label>
    <type>Checkbox</type>
</CustomField>