force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasMarketingCampaign__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasMarketingCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - Has Marketing Campaign</label>
    <type>Checkbox</type>
</CustomField>