force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasProduct__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Product</label>
    <type>Checkbox</type>
</CustomField>