force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasProposition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasProposition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Proposition</label>
    <type>Checkbox</type>
</CustomField>