force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasResource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasResource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Resource</label>
    <type>Checkbox</type>
</CustomField>