force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasResourceType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasResourceType__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Resource Type</label>
    <type>Checkbox</type>
</CustomField>