force-app/main/default/objects/KimbleOne__AnalysisDimension__c/fields/KimbleOne__HasUser__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has User</label>
    <type>Checkbox</type>
</CustomField>